Prevent wrapping in code snippets
http://stackoverflow.com/a/11138678/373074

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -77,3 +77,9 @@
   -ms-user-select: none;
   user-select: none;
 }
+
+/* prevent wrapping in code snippets */
+.highlight pre {
+  white-space: pre;
+  overflow-x: auto;
+  width: inherit; }
